@@ -25,6 +25,8 @@ New in v0.7.07 (2016/01/??)
   - adjusted help text and man page to reflect the change
 * Undo changes to test_restart.py.  GNU tar is needed.
 * Fix minor pep8 nit in collections.py
+* Applied changes from ralle-ubuntu to fix bug 1072130.
+  - duplicity does not support ftpes://
 
 
 New in v0.7.06 (2015/12/07)
